@@ -3503,8 +3503,12 @@ typedef union _FILE_SEGMENT_ELEMENT {
 #define JOB_OBJECT_LIMIT_PROCESS_MEMORY             0x0100
 #define JOB_OBJECT_LIMIT_JOB_MEMORY                 0x0200
 #define JOB_OBJECT_LIMIT_DIE_ON_UNHANDLED_EXCEPTION 0x0400
-#define JOB_OBJECT_BREAKAWAY_OK                     0x0800
-#define JOB_OBJECT_SILENT_BREAKAWAY                 0x1000
+#define JOB_OBJECT_LIMIT_BREAKAWAY_OK               0x0800
+#define JOB_OBJECT_LIMIT_SILENT_BREAKAWAY_OK        0x1000
+
+/* Wrong definitions, but keep for backward compatibility. */
+#define JOB_OBJECT_BREAKAWAY_OK      JOB_OBJECT_LIMIT_BREAKAWAY_OK
+#define JOB_OBJECT_SILENT_BREAKAWAY  JOB_OBJECT_LIMIT_SILENT_BREAKAWAY_OK
 
 /* JOBOBJECT_BASIC_UI_RESTRICTIONS.UIRestrictionsClass constants */
 #define JOB_OBJECT_UILIMIT_HANDLES          0x0001
